<resources>
    <string name="app_name">ChildVaccine</string>
    <string name="gender">Gender:</string>
    <string name="birthdate">Birth Date:</string>
    <string name="child_name">Child Name:</string>
    <string name="register_label">Registration</string>
    <string name="enter_username">Enter username:</string>
    <string name="enter_password">Enter password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="password_must_be_6_digits_or_more">Password must be 6 digits or more</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG-IN</string>
    <string name="health_is_wealth_let_us_help_protect_your_children">Health is wealth. Let us help protect your children.</string>
    <string name="childvaccine">ChildVaccine</string>
    <string name="child_image">Child Image:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="vaccines_left">vaccines left</string>
    <string name="expired_vaccines">Expired Vaccines</string>
    <string name="pinned_vaccines">Pinned Vaccines</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="allergies_and_asthma">ALLERGIES AND ASTHMA</string>
    <string name="safety1">Because vaccines do not prevent most childhood infections, they are not likely to alter the balance of cells that mediate allergic responses. In fact, several large, well-controlled studies have shown that children who receive vaccines are not at greater risk of having allergies or asthma.</string>
    <string name="sick_children">SICK CHILDREN</string>
    <string name="safety2">Children with mild illnesses, such as fever, diarrhea, ear infections or upper respiratory infections, are typically able to receive vaccines. Studies have shown that children with mild illnesses are not at greater risk of experiencing side effects than healthy children who get vaccinated and the level of protection provided by the immunization is equivalent. In contrast, children with severe illnesses should not be vaccinated to avoid questions related to the cause of any symptoms that might occur.</string>
    <string name="safety3">The MMR vaccine, thimerosal in vaccines and receiving too many vaccines at one time have all been accused of causing autism. However, numerous large, well-controlled scientific studies have shown: Children who receive the MMR vaccine are not at increased risk of autism. The chance of getting autism is the same in children who received vaccines containing thimerosal and children who received vaccines without thimerosal. An alternative vaccination schedule does not reduce the risk of autism. These studies have proven that autism is not caused by the MMR vaccine, thimerosal in vaccines, or receiving too many vaccines at one time.</string>
    <string name="chronic_diseases">CHRONIC DISEASES</string>
    <string name="safety4">Some have suggested that vaccines cause chronic diseases, such as diabetes, multiple sclerosis or arthritis. However, vaccines do not induce an immune response vigorous enough to cause autoimmunity; studies have shown no link between vaccines and diabetes, multiple sclerosis, arthritis, or other autoimmune diseases.</string>
    <string name="chickenpox_varicella_vaccine">CHICKENPOX (VARICELLA) VACCINE</string>
    <string name="the_chickenpox_vaccine_is_used_to_prevent_chickenpox">The chickenpox vaccine is used to prevent chickenpox.</string>
    <string name="before_the_chickenpox_vaccine_one_or_two_children_in_the_u_s_died_every_week_from_chickenpox">Before the chickenpox vaccine, one or two children in the U.S. died every week from chickenpox.</string>
    <string name="type_of_vaccine">TYPE OF VACCINE</string>
    <string name="the_chickenpox_vaccine_is_a_live_weakened_viral_vaccine">The chickenpox vaccine is a live, weakened viral vaccine.</string>
    <string name="vaccine_side_effects">VACCINE SIDE EFFECTS</string>
    <string name="chickenpoxinfo">• Pain, redness, swelling or soreness at the injection site.\n • Low-grade fever.\n • Rash with fewer than 10 blisters around the area of the shot or on other parts of the body.</string>
    <string name="reasons_to_get_the_chickenpox_vaccine">REASONS TO GET THE CHICKENPOX VACCINE</string>
    <string name="chickenpox_still_exists_n_chickenpox_can_sometimes_cause_severe_complications_and_even_death_n_some_people_can_t_get_the_chickenpox_vaccine_and_require_protection_from_others_n_getting_the_chickenpox_vaccine_can_offer_protection_from_shingles_as_an_adult_n_the_chickenpox_vaccine_is_safe">• Chickenpox still exists.\n • Chickenpox can sometimes cause severe complications and even death.\n • Some people can\'t get the chickenpox vaccine and require protection from others.\n • Getting the chickenpox vaccine can offer protection from shingles as an adult.\n • The chickenpox vaccine is safe.</string>
    <string name="diphtheria_tetanus_and_pertussis_vaccines">DIPHTHERIA, TETANUS AND PERTUSSIS VACCINES</string>
    <string name="the_diphtheria_tetanus_and_pertussis_vaccines_are_used_to_prevent_these_diseases_and_are_typically_given_in_the_u_s_in_combined_formulations">The diphtheria, tetanus and pertussis vaccines are used to prevent these diseases and are typically given in the U.S. in combined formulations.</string>
    <string name="before_these_vaccines_about_1_800_people_died_from_diphtheria_about_500_died_from_tetanus_and_about_8_000_died_from_pertussis_every_year">Before these vaccines, about 1,800 people died from diphtheria, about 500 died from tetanus and about 8,000 died from pertussis every year.</string>
    <string name="hepatitis_a_vaccine">HEPATITIS A VACCINE</string>
    <string name="the_hepatitis_a_vaccine_is_used_to_prevent_hepatitis_a">The hepatitis A vaccine is used to prevent hepatitis A.</string>
    <string name="before_the_vaccine_every_year_about_70_people_died_from_hepatitis_a_infections">Before the vaccine, every year about 70 people died from hepatitis A infections.</string>
    <string name="the_hepatitis_a_vaccine_is_a_killed_viral_vaccine">The hepatitis A vaccine is a killed viral vaccine.</string>
    <string name="pain_redness_and_tenderness_at_the_injection_site_n_headache_n_mild_fever_n_feeling_out_of_sorts_n_fatigue">• Pain, redness and tenderness at the injection site.\n • Headache.\n • Mild fever.\n • Feeling out of sorts.\n • Fatigue.</string>
    <string name="reasons_to_get_the_hepatitis_a_vaccine">REASONS TO GET THE HEPATITIS A VACCINE</string>
    <string name="it_s_hard_to_know_who_s_contagious_n_eating_at_a_restaurant_can_lead_to_hepatitis_a_infection_n_hepatitis_a_infections_can_be_long_lasting_n_hepatitis_a_infections_can_cause_death_n_the_hepatitis_a_vaccine_is_safe">• It\'s hard to know who\'s contagious.\n • Eating at a restaurant can lead to hepatitis A infection.\n • Hepatitis A infections can be long-lasting.\n • Hepatitis A infections can cause death.\n • The hepatitis A vaccine is safe.</string>
    <string name="hib_vaccine">HIB VACCINE</string>
    <string name="the_hib_vaccine_is_used_to_prevent_haemophilus_influenzae_type_b_hib">The Hib vaccine is used to prevent Haemophilus influenzae type b (Hib).</string>
    <string name="before_the_hib_vaccine_every_year_about_20_000_children_would_get_serious_and_sometimes_fatal_infections_with_hib">Before the Hib vaccine, every year about 20,000 children would get serious, and sometimes fatal, infections with Hib.</string>
    <string name="the_hib_vaccine_is_a_conjugate_vaccine">The Hib vaccine is a conjugate vaccine.</string>
    <string name="pain_or_soreness_at_the_injection_site_n_low_grade_fever_n_loss_of_appetite_n_irritability">• Pain or soreness at the injection site.\n • Low-grade fever.\n • Loss of appetite.\n • Irritability.</string>
    <string name="reasons_to_get_the_hib_vaccine">REASONS TO GET THE HIB VACCINE</string>
    <string name="hibinfo">• Hib still exists.\n • Infants and young children are the most susceptible to Hib.\n • Unvaccinated or incompletely vaccinated children are at higher risk of disease caused by Hib.\n • The Hib vaccine decreases the number of Hib carriers in the population.\n • The Hib vaccine is safe.</string>
    <string name="rotavirus_vaccine">ROTAVIRUS VACCINE</string>
    <string name="the_rotavirus_vaccine_is_used_to_prevent_rotavirus">The rotavirus vaccine is used to prevent rotavirus.</string>
    <string name="before_the_vaccine_rotavirus_caused_illness_in_2_7_million_children_every_year_and_virtually_every_child_had_a_rotavirus_infection_by_5_years_of_age">Before the vaccine, rotavirus caused illness in 2.7 million children every year, and virtually every child had a rotavirus infection by 5 years of age.</string>
    <string name="there_are_two_rotavirus_vaccines_and_both_are_live_weakened_viral_vaccines">There are two rotavirus vaccines and both are live, weakened viral vaccines.</string>
    <string name="vomiting_n_diarrhea_n_fever_n_irritability">• Vomiting.\n • Diarrhea.\n • Fever.\n • Irritability.</string>
    <string name="reasons_to_get_the_rotavirus_vaccine">REASONS TO GET THE ROTAVIRUS VACCINE</string>
    <string name="rotainfo">• Every child will become infected with rotavirus by 5 years of age.\n • Some rotavirus infections can lead to hospitalization.\n • Rotavirus occurs throughout the world, no matter the level of sanitation.\n • The rotavirus vaccine is safe.</string>
    <string name="bcg_vaccine">BCG VACCINE</string>
    <string name="bcg_vaccine_is_a_vaccine_primarily_used_against_tuberculosis">BCG vaccine is a vaccine primarily used against tuberculosis.</string>
    <string name="among_children_it_prevents_about_20_from_getting_infected_and_among_those_who_do_get_infected_it_protects_half_from_developing_disease">Among children it prevents about 20% from getting infected and among those who do get infected it protects half from developing disease.</string>
    <string name="the_bcg_vaccine_is_made_from_a_weakened_strain_of_tb_bacteria">The BCG vaccine is made from a weakened strain of TB bacteria.</string>
    <string name="injection_scar_n_allergy_to_the_bcg_vaccine">• Injection scar\n • Allergy to the BCG vaccine.</string>
    <string name="reasons_to_get_the_bcg_vaccine">REASONS TO GET THE BCG VACCINE</string>
    <string name="bcginfo">• Genetic variation in BCG strains.\n • Genetic variation in populations.\n • Interference by nontuberculous mycobacteria.\n • Interference by concurrent parasitic infection.</string>
    <string name="reasons_to_get_the_mcv4_vaccine">REASONS TO GET THE MCV4 VACCINE</string>
    <string name="mcv4info">• Meningococcal disease often occurs without warning – even among people who are otherwise healthy.\n • Meningococcal disease can spread from person to person through close contact.</string>
    <string name="sudden_high_fever_n_headache_n_stiff_neck_n_fatigue">• Sudden high fever.\n • Headache.\n • Stiff neck.\n • Fatigue.</string>
    <string name="meningococcal_polysaccharide_vaccine_is_given_as_an_injection_into_the_fatty_tissue_of_the_upper_arm">Meningococcal polysaccharide vaccine is given as an injection into the fatty tissue of the upper arm.</string>
    <string name="even_when_it_is_treated_meningococcal_disease_kills_10_to_15_infected_people_out_of_100">Even when it is treated, meningococcal disease kills 10 to 15 infected people out of 100.</string>
    <string name="mcv4_vaccine_is_used_to_prevent_meningococcal_disease">MCV4 vaccine is used to prevent meningococcal disease.</string>
    <string name="mcv4_vaccine">MCV4 VACCINE</string>
</resources>