<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/hepatitis_a_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:id="@+id/textView" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/darkGrey"
        android:text="@string/the_hepatitis_a_vaccine_is_used_to_prevent_hepatitis_a"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="#424d52"
        android:text="@string/before_the_vaccine_every_year_about_70_people_died_from_hepatitis_a_infections"
        android:textStyle="bold|italic"
        />
    <TextView
        android:text="@string/type_of_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:id="@+id/textView2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="#424d52"
        android:text="@string/the_hepatitis_a_vaccine_is_a_killed_viral_vaccine"/>
    <TextView
        android:text="@string/vaccine_side_effects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:id="@+id/textView3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="#424d52"
        android:text="@string/pain_redness_and_tenderness_at_the_injection_site_n_headache_n_mild_fever_n_feeling_out_of_sorts_n_fatigue"/>
    <TextView
        android:text="@string/reasons_to_get_the_hepatitis_a_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:id="@+id/textView4" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="#424d52"
        android:text="@string/it_s_hard_to_know_who_s_contagious_n_eating_at_a_restaurant_can_lead_to_hepatitis_a_infection_n_hepatitis_a_infections_can_be_long_lasting_n_hepatitis_a_infections_can_cause_death_n_the_hepatitis_a_vaccine_is_safe"/>

</LinearLayout>