<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/mcv4_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/mcv4_vaccine_is_used_to_prevent_meningococcal_disease"
            android:textColor="@color/darkGrey"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/even_when_it_is_treated_meningococcal_disease_kills_10_to_15_infected_people_out_of_100"
            android:textColor="#424d52"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/type_of_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/meningococcal_polysaccharide_vaccine_is_given_as_an_injection_into_the_fatty_tissue_of_the_upper_arm"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/vaccine_side_effects"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/sudden_high_fever_n_headache_n_stiff_neck_n_fatigue"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
android:text="@string/reasons_to_get_the_mcv4_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
android:text="@string/mcv4info"
            android:textColor="#424d52"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>

