<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/bcg_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/bcg_vaccine_is_a_vaccine_primarily_used_against_tuberculosis"
            android:textColor="@color/darkGrey"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/among_children_it_prevents_about_20_from_getting_infected_and_among_those_who_do_get_infected_it_protects_half_from_developing_disease"
            android:textColor="#424d52"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/type_of_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/the_bcg_vaccine_is_made_from_a_weakened_strain_of_tb_bacteria"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/vaccine_side_effects"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/injection_scar_n_allergy_to_the_bcg_vaccine"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
android:text="@string/reasons_to_get_the_bcg_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
android:text="@string/bcginfo"
            android:textColor="#424d52"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>

