<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/hib_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/the_hib_vaccine_is_used_to_prevent_haemophilus_influenzae_type_b_hib"
            android:textColor="@color/darkGrey"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/before_the_hib_vaccine_every_year_about_20_000_children_would_get_serious_and_sometimes_fatal_infections_with_hib"
            android:textColor="#424d52"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/type_of_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
android:text="@string/the_hib_vaccine_is_a_conjugate_vaccine"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/vaccine_side_effects"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/pain_or_soreness_at_the_injection_site_n_low_grade_fever_n_loss_of_appetite_n_irritability"
            android:textColor="#424d52"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/reasons_to_get_the_hib_vaccine"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/hibinfo"
            android:textColor="#424d52"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>

